--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,66 @@ body {
   gap: 1rem;
 }
 
+.container > div {
+  border-radius: 15px;
+}
+
+.card-1 {
+  background-color: var(--purple-500);
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 3rem;
+}
+
+.card-1 h3 {
+  font-size: 3.2rem;
+  font-weight: var(--font-weight-medium);
+  text-align: center;
+  letter-spacing: -1px;
+}
+
+.card-1 h3 span {
+  color: var(--yellow-500);
+}
+
+.card-1 .space-ajust {
+  position: relative;
+  right: -6px;
+}
+
+.card-1 p {
+  font-size: 1.4rem;
+  color: var(--purple-100);
+}
+
+.card-1 img {
+  max-width: 200px;
+}
+
+.card-2 {
+}
+.card-3 {
+  background-color: var(--yellow-500);
+}
+.card-4 {
+  background-color: var(--purple-100);
+}
+.card-5 {
+}
+.card-6 {
+  background-color: var(--purple-500);
+  color: var(--white);
+}
+.card-7 {
+  background-color: var(--yellow-100);
+}
+.card-8 {
+  background-color: var(--yellow-500);
+}
+
 @media (min-width: 700px) {
   .container {
     grid-template-columns: repeat(4, 1fr);
@@ -59,34 +119,28 @@ body {
       "bl bc br br";
   }
 
-  .container .item:nth-child(1) {
+  .card-1 {
     grid-area: tc;
   }
-  .container .item:nth-child(2) {
+  .card-2 {
     grid-area: lc;
   }
-  .container .item:nth-child(3) {
+  .card-3 {
     grid-area: rc;
   }
-  .container .item:nth-child(4) {
+  .card-4 {
     grid-area: tr;
   }
-  .container .item:nth-child(5) {
+  .card-5 {
     grid-area: bc;
   }
-  .container .item:nth-child(6) {
+  .card-6 {
     grid-area: br;
   }
-  .container .item:nth-child(7) {
+  .card-7 {
     grid-area: tl;
   }
-  .container .item:nth-child(8) {
+  .card-8 {
     grid-area: bl;
   }
-}
-
-.item {
-  border: 2px solid saddlebrown;
-  width: 100%;
-  min-height: 50px;
 }
