--- a/styles.css
+++ b/styles.css
@@ -46,13 +46,14 @@ body {
   font-weight: var(--font-weight-regular);
   color: var(--black);
   background-color: var(--gray-100);
+  padding: 1rem;
 }
 
 .container {
   display: grid;
   width: 100%;
   max-width: 1200px;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .card-1,
@@ -144,32 +145,104 @@ body {
 
 .card-3 {
   background-color: var(--yellow-500);
+  padding-bottom: 0;
+  position: relative;
+  overflow: hidden;
 }
 
 .card-3 img {
-  width: 260px;
+  width: 200px;
+  position: relative;
+  bottom: -13%;
 }
 
 .card-4 {
   background-color: var(--purple-100);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 1rem;
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
 }
 
 .card-4 img {
   width: 100%;
 }
 
-.card-5 {
+.card-4 p {
+  text-align: center;
+  font-size: 1.2rem;
+  letter-spacing: 0px;
+  word-spacing: -1px;
+  line-height: 20px;
+  font-weight: 400;
 }
+
+.card-5 {
+  background-color: var(--white);
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+
+.card-5 h3 {
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+.card-5 p {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.card-5 img {
+  margin-top: 10px;
+  width: 200px;
+}
+
 .card-6 {
   background-color: var(--purple-500);
   color: var(--white);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.6rem;
+  padding-top: 1.6rem;
 }
+
+.card-6 h3 {
+  font-size: 2rem;
+  text-align: center;
+  line-height: 1.8rem;
+  font-weight: 400;
+  margin: 0 1rem;
+}
+
+.card-6 img {
+  width: 220px;
+}
+
 .card-7 {
   background-color: var(--yellow-100);
+  padding: 1.8rem;
+}
+
+.card-7 h3 {
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.7rem;
+}
+
+.card-7 h3 em {
+  color: var(--purple-500);
 }
 
 .card-7 img {
-  width: 210px;
+  margin-top: 1.4rem;
+  width: 185px;
 }
 
 .card-8 {
@@ -177,8 +250,15 @@ body {
   padding: 1rem 1.6rem;
 }
 
+.card-8 h3 {
+  font-size: 1.9rem;
+  font-weight: 500;
+  line-height: 1.7rem;
+}
+
 .card-8 img {
-  width: 260px;
+  width: 205px;
+  padding-top: 1.5rem;
 }
 
 .title {
