--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,8 @@ body {
   font-weight: var(--font-weight-regular);
   color: var(--black);
   background-color: var(--gray-100);
-  padding: 1rem;
+  padding: 2rem 1rem;
+  height: 100vh;
 }
 
 .container {
@@ -54,6 +55,7 @@ body {
   width: 100%;
   max-width: 1200px;
   gap: 2rem;
+  margin: 0 auto;
 }
 
 .card-1,
@@ -139,21 +141,15 @@ body {
     radial-gradient(circle 30px at bottom center, transparent 0, black 30px);
 }
 
-.card p {
-  font-size: 1rem;
-}
-
 .card-3 {
   background-color: var(--yellow-500);
   padding-bottom: 0;
-  position: relative;
   overflow: hidden;
 }
 
 .card-3 img {
-  width: 200px;
-  position: relative;
-  bottom: -13%;
+  transform: translateY(1.5rem);
+  width: 220px;
 }
 
 .card-4 {
@@ -167,6 +163,7 @@ body {
 }
 
 .card-4 img {
+  margin-top: 0.6rem;
   width: 100%;
 }
 
@@ -176,7 +173,8 @@ body {
   letter-spacing: 0px;
   word-spacing: -1px;
   line-height: 20px;
-  font-weight: 400;
+  font-weight: 500;
+  margin: 0 0.2rem;
 }
 
 .card-5 {
@@ -262,10 +260,10 @@ body {
 }
 
 .title {
-  font-size: 24px;
+  font-size: 1.8rem;
+  line-height: 1.7rem;
   font-weight: 500;
   letter-spacing: -2px;
-  line-height: 21px;
 }
 
 @media (min-width: 700px) {
@@ -291,9 +289,35 @@ body {
   .card-3 {
     grid-area: rc;
   }
+
+  .card-3 .title {
+    font-size: 2.5rem;
+    line-height: 2.3rem;
+  }
+
+  .card-3 img {
+    width: 100%;
+  }
+
   .card-4 {
     grid-area: tr;
+    overflow: hidden;
+    padding-left: 2rem;
   }
+
+  .card-4 h3 {
+    font-size: 1.7rem;
+    line-height: 1.5rem;
+  }
+
+  .card-4 img {
+    width: 340px;
+  }
+
+  .card-4 p {
+    text-align: left;
+  }
+
   .card-5 {
     grid-area: bc;
   }
@@ -305,5 +329,50 @@ body {
   }
   .card-8 {
     grid-area: bl;
+  }
+
+  .card-3 {
+    max-height: 270px;
+  }
+
+  .card-6 {
+    flex-direction: row;
+  }
+  .card-6 h3 {
+    font-size: 2.7rem;
+    line-height: 2.6rem;
+    font-weight: 500;
+  }
+
+  .card-7 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card-7 h3 {
+    font-size: 2.7rem;
+    line-height: 2.3rem;
+  }
+
+  .card-7 img {
+    width: 215px;
+  }
+
+  .card-8 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .card-8 h3 {
+    margin-right: 2rem;
+  }
+
+  .title {
+    font-size: 2.5rem;
+    line-height: 2.3rem;
   }
 }
